<resources>
    <string name="app_name">VfAssignment</string>
    <string name="login">Login</string>
    <string name="viral_fission">Viral Fission</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_text">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_to_the_home_screen">Welcome to the Home Screen</string>
</resources>